--- a/CoreLibrary/CoreLibrary.csproj
+++ b/CoreLibrary/CoreLibrary.csproj
@@ -10,4 +10,9 @@
       <Folder Include="Exceptions" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.3.22175.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0-preview.3.22175.1" />
+    </ItemGroup>
+
 </Project>
