--- a/OzonHelper/OzonHelper.csproj
+++ b/OzonHelper/OzonHelper.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\TestsLibrary\TestsLibrary.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data" />
+    </ItemGroup>
+
 </Project>
