--- a/OzonHelper/OzonHelper.csproj
+++ b/OzonHelper/OzonHelper.csproj
@@ -9,13 +9,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0-preview.3.22178.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0-preview.4.22229.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0-preview.4.22229.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CoreLibrary\CoreLibrary.csproj" />
-      <ProjectReference Include="..\SiteParserLibrary\SiteParserLibrary.csproj" />
-      <ProjectReference Include="..\TestsLibrary\TestsLibrary.csproj" />
+      <ProjectReference Include="..\OfficialOzonApi\OfficialOzonApi.csproj" />
     </ItemGroup>
 
 </Project>
