--- a/OzonHelper/OzonHelper.csproj
+++ b/OzonHelper/OzonHelper.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FuzzySharp" Version="2.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0-preview.3.22178.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0-preview.4.22229.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0-preview.4.22229.2" />
